--- a/bug-lifecycle/pom.xml
+++ b/bug-lifecycle/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>bug-lifecycle</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>bug-lifecycle</name>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
