--- a/bug-lifecycle/src/main/resources/application-dev.yml
+++ b/bug-lifecycle/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://182.207.113.157:3306/blcmdb?serverTimezone=GMT%2B8
+    url: jdbc:mysql://182.207.113.157:3306/zentao?serverTimezone=GMT%2B8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
